# clickhouse-arrow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
clickhouse_arrow/: __init__.py
src/clickhouse_arrow/: __init__.py
tests/: conftest.py  docker-compose.yml  test_client.py
