[tool.poetry]
name = "clickhouse-arrow"
version = "0.1.0"
description = "A minimal client that uses the ClickHouse HTTP API and Apache Arrow."
authors = ["Martin Galpin <galpin@galpin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-benchmark = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
