[tool.poetry]
name = "clickhouse-arrow"
version = "0.2.1"
description = "A minimal client that uses the ClickHouse HTTP API and Apache Arrow."
authors = ["Martin Galpin <galpin@galpin.com>"]
homepage = "https://github.com/galpin/clickhouse-arrow"
repository = "https://github.com/galpin/clickhouse-arrow"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pyarrow = ">=11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-benchmark = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pytest-docker = "^1.0.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
