[project]
name = "clickhouse-arrow"
version = "0.4.0"
description = "A minimal client that uses the ClickHouse HTTP API and Apache Arrow."
authors = [
    { name = "Martin Galpin", email = "galpin@galpin.com" },
]
homepage = "https://github.com/galpin/clickhouse-arrow"
repository = "https://github.com/galpin/clickhouse-arrow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=11.0.0",
    "urllib3<2.0.0"
]

[dependency-groups]
dev = [
    "pytest>=7.2.2",
    "pytest-benchmark>=4.0.0",
    "pytest-docker>=1.0.1",
    "pandas>=1.5.3"
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
